--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
               <div class="col-12">
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
-                      <a href="#" class="logo">
-                          <img  id="myImage" alt="logo" height="90" margin-left="10"  src="assets/images/DLOGO.png" />
+                      <a href="#" class="logo" id="logo-white">
+                          <img  id="myImage" alt="logo" height="90" src="assets/images/DLOGO.png" />
+                      </a>
+                      <a href="#" class="logo" id="logo-class">
+                          <img  id="black-logo" alt="logo" height="90" margin-left="10"  src="assets/images/logo-black.png" />
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -429,7 +432,7 @@
 
   <section class="contact-us" id="contact"></section>
 
-  <section class="hero overlay-container">
+  <!--<section class="hero overlay-container">
       <div class="container">
           <div class="row">
               <div id="content">
@@ -442,7 +445,7 @@
               </div>
           </div>
       </div>
-  </section>
+  </section>-->
   <style>
       #aply .main-button-red {
           display: flex;
