--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         <link rel="stylesheet" href="assets/css/lightbox.css">
   </head>
 <body>
-
+<div id="preloader-active">
+    <div class="preloader d-flex align-items-center justify-content-center">
+        <div class="preloader-inner position-relative">
+            <div class="preloader-circle"></div>
+            <div class="preloader-img pere-text">
+                <img src="assets/images/favicon.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
   <!-- Sub Header -->
   <div class="sub-header" style="background: #366457;">
     <div class="container">
